[gd_scene load_steps=8 format=3 uid="uid://byqtby35oet10"]

[ext_resource type="Script" path="res://UI/PlayerHUD/interact_prompt.gd" id="1_ayjrk"]
[ext_resource type="Texture2D" uid="uid://bhhyrkg5t6jlf" path="res://UI/PlayerHUD/ProgressBar-Under.png" id="1_brdjc"]
[ext_resource type="Texture2D" uid="uid://c0pojbar77pcl" path="res://addons/controller_icons/assets/xboxseries/x.png" id="1_dojg1"]
[ext_resource type="Texture2D" uid="uid://crwm7wa5ksj43" path="res://UI/PlayerHUD/ProgressBar-Over.png" id="2_q356j"]
[ext_resource type="Texture2D" uid="uid://dgqel1jcd4uay" path="res://UI/PlayerHUD/ProgressBar-Progress.png" id="3_3vp4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ob36"]
bg_color = Color(0.05, 0.05, 0.05, 0.286275)

[sub_resource type="LabelSettings" id="LabelSettings_2odog"]
font_size = 22

[node name="InteractPrompt" type="PanelContainer"]
offset_left = -48.0
offset_top = -32.0
offset_right = 39.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0ob36")
script = ExtResource("1_ayjrk")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="ProgressIndicator" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
texture_filter = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
value = 33.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("1_brdjc")
texture_over = ExtResource("2_q356j")
texture_progress = ExtResource("3_3vp4w")

[node name="InputIndicator" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("1_dojg1")
expand_mode = 5
stretch_mode = 4

[node name="PromptText" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "A"
label_settings = SubResource("LabelSettings_2odog")
uppercase = true
